# libkrun

./: Cargo.toml  Makefile
examples/: nitro.c  snp-config-attest.json
include/: libkrun.h
init/: init.c
init/tee/: snp_attest.c  snp_attest.h  snp_dbg.c
init/tee/kbs/: kbs.h  kbs_crypto.c  kbs_curl.c  kbs_types.c  kbs_util.c
nitro/: Cargo.toml  build.rs
nitro/examples/: Makefile  nitro.c
nitro/include/: libkrun.h
nitro/src/: lib.rs  nitro.rs
src/arch/: Cargo.toml
src/devices/: Cargo.toml
src/kernel/: Cargo.toml
src/libkrun/: Cargo.toml
src/libkrun/src/: lib.rs
src/nitro/src/net/: proxy.rs
src/smbios/: Cargo.toml
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  resources.rs
src/vmm/src/device_manager/kvm/: mmio.rs
src/vmm/src/linux/: vstate.rs
src/vmm/src/linux/tee/: amdsev.rs  amdsnp.rs
src/vmm/src/vmm_config/: boot_source.rs
