[package]
name = "libkrun"
version = "1.10.1"
authors = ["Sergio Lopez <slp@redhat.com>"]
edition = "2021"
build = "build.rs"

[features]
tee = []
amd-sev = [ "blk", "tee" ]
net = []
blk = []
efi = [ "blk", "net" ]
gpu = []
snd = []
virgl_resource_map2 = []

[dependencies]
crossbeam-channel = "0.5"
env_logger = "0.9.0"
kvm-bindings = { version = ">=0.10", features = ["fam-wrappers"] }
libc = ">=0.2.39"
libloading = "0.8"
log = "0.4.0"
once_cell = "1.4.1"
vm-memory = { version = ">=0.13", features = ["backend-mmap"] }

devices = { path = "../devices" }
polly = { path = "../polly" }
utils = { path = "../utils" }
vmm = { path = "../vmm" }

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../hvf" }

[lib]
name = "krun"
crate-type = ["cdylib"]
